--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,8 +99,14 @@ jobs:
                 --config Release ^
                 --parallel ${{steps.cpu-cores.outputs.count}}
 
-    - name: Upload logs on failure
-      if: failure()
+    - name: Package output into ZIP
+      run: |
+        cd output
+        zip -r ../module.zip .
+      shell: bash
+
+    - name: Upload Module
+      if: success()
       uses: actions/upload-artifact@v4
       with:
         name: build-logs
@@ -108,3 +114,15 @@ jobs:
           build/**/*.log
           CMakeFiles/**/*.log
         retention-days: 7
+
+    - name: Package output into ZIP
+      run: |
+        cd Release
+        zip -r ../module.zip .
+      shell: bash
+
+    - name: Upload zip artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: module
+        path: module.zip
