--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -177,18 +177,21 @@ endforeach()
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS} resource/resource.qrc ${QM_FILES})
 
-if(WIN32)
-    set(ALL_DLLS_TO_COPY ${OpenCASCADE_TOOLKITS_DLLS} ${OpenCASCADE_3RDPARTY_DLLS})
-    if(ALL_DLLS_TO_COPY)
-        # Add a post-build command to copy all necessary DLLs to the output directory
-        add_custom_command(
-            TARGET ${PROJECT_NAME} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                    ${ALL_DLLS_TO_COPY}
-                    $<TARGET_FILE_DIR:${PROJECT_NAME}>
-            COMMAND_EXPAND_LISTS
-            COMMENT "Copying OpenCASCADE and 3rd-party runtime DLLs"
-        )
+option(IS_COPY_DLLS "Copy OpenCASCADE and 3rd-party DLLs" ON)
+if(IS_COPY_DLLS)
+    if(WIN32)
+        set(ALL_DLLS_TO_COPY ${OpenCASCADE_TOOLKITS_DLLS} ${OpenCASCADE_3RDPARTY_DLLS})
+        if(ALL_DLLS_TO_COPY)
+            # Add a post-build command to copy all necessary DLLs to the output directory
+            add_custom_command(
+                TARGET ${PROJECT_NAME} POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                        ${ALL_DLLS_TO_COPY}
+                        $<TARGET_FILE_DIR:${PROJECT_NAME}>
+                COMMAND_EXPAND_LISTS
+                COMMENT "Copying OpenCASCADE and 3rd-party runtime DLLs"
+            )
+        endif()
     endif()
 endif()
 
