feat : cmake dlls

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -71,7 +71,21 @@ list(APPEND OCCT_LIBRARIES_TO_LINK "OpenGL32.lib")
 file(GLOB OpenCASCADE_TOOLKITS_DLLS "${OpenCASCADE_BINARY_DIR}/*.dll")
 
 # 3RDPARTY
-file(GLOB 3RDPARTY_MODULE_DIRS "${OpenCASCADE_3RDPARTY_DIR}/*")
+file(GLOB FREETYPE_DIRS         "${OpenCASCADE_3RDPARTY_DIR}/freetype*")
+file(GLOB TCLTK_DIRS            "${OpenCASCADE_3RDPARTY_DIR}/tcltk*")
+file(GLOB FREEIMAGE_DIRS        "${OpenCASCADE_3RDPARTY_DIR}/freeimage*")
+file(GLOB TBB_DIRS              "${OpenCASCADE_3RDPARTY_DIR}/tbb*")
+file(GLOB JEMALLOC_DIRS         "${OpenCASCADE_3RDPARTY_DIR}/jemalloc*")
+file(GLOB FFMPEG_DIRS           "${OpenCASCADE_3RDPARTY_DIR}/ffmpeg*")
+
+set(3RDPARTY_MODULE_DIRS
+    ${FREETYPE_DIRS}
+    ${TCLTK_DIRS}
+    ${FREEIMAGE_DIRS}
+    ${TBB_DIRS}
+    ${JEMALLOC_DIRS}
+    ${FFMPEG_DIRS}
+)
 set(OpenCASCADE_3RDPARTY_DLLS "")
 foreach(3RDPARTY_MODULE_DIR ${3RDPARTY_MODULE_DIRS})
     set(3RDPARTY_MODULE_BIN_DIR "${3RDPARTY_MODULE_DIR}/bin")
