--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -38,6 +38,7 @@ set(
     TKG2d TKG3d TKGeomBase TKBRep
     # ModelingAlgorithms
     TKBO TKBool TKGeomAlgo TKHLR TKMesh TKPrim TKShHealing TKTopAlgo
+    TKOffset TKFillet
     # Visualization
     TKMeshVS TKOpenGl TKService TKV3d
     # ApplicationFramework
