--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -179,8 +179,11 @@ file(
     GLOB SOURCES
     src/*.cpp
     src/ui/*.cpp
+    src/display/*.cpp
+    src/util/*.cpp
+    src/common/*.cpp
     # ui
-    src/*.ui
+    src/ui/*.ui
     # external
     external/SARibbon/SARibbon.cpp
 )
@@ -193,6 +196,9 @@ file(
     GLOB HEADERS
     src/*.h
     src/ui/*.h
+    src/display/*.h
+    src/util/*.h
+    src/common/*.h
 )
 
 #########
@@ -254,6 +260,11 @@ target_include_directories(${PROJECT_NAME}
     PRIVATE 
         ${MANUAL_OCCT_INCLUDE_DIR}
         external/SARibbon
+        src
+        src/ui
+        src/display
+        src/util
+        src/common
 )
 target_link_libraries(${PROJECT_NAME} 
     PRIVATE 
