--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,7 +92,8 @@
     "files.encoding": "utf8",
     "cmake.configureArgs": [
         "-DOpenCASCADE_DIR=C:/Libs/OCCT/occt-7.8.0-vc14-64",
-        "-DOpenCASCADE_3RDPARTY_DIR=C:/Libs/OCCT/3rdparty-vc14-64"
+        "-DOpenCASCADE_3RDPARTY_DIR=C:/Libs/OCCT/3rdparty-vc14-64",
+        "-DBOOST_ROOT=C:/Libs/boost/boost_1_86_0/lib64-msvc-14.2/cmake/Boost-1.86.0"
     ]
     // "cmake.configureArgs": [
     //     "-DOpenCASCADE_DIR=C:/Dev_libs/OpenCASCADE/OCCT-7_8_0",
