--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -164,6 +164,7 @@ endif()
 #########
 # Boost
 #########
+cmake_policy(SET CMP0167 NEW)
 find_package(Boost REQUIRED)
 if(Boost_FOUND)
     message(STATUS "Boost_DIR: ${Boost_DIR}")
