--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,13 +42,10 @@ jobs:
         modules: 'qtcharts qtdatavis3d qtnetworkauth'
 
     - name: Install Boost
-      uses: MarkusJx/install-boost@v2.4.5
-      id: install-boost
-      with:
-        boost_version: ${{ env.BOOST_VERSION }}
-        platform_version: 2022
-        toolset: msvc
-        arch: x86
+      shell: cmd
+      run: |
+        curl -L -o boost_1_81_0.exe https://sourceforge.net/projects/boost/files/boost-binaries/1.81.0/boost_1_81_0-msvc-14.3-64.exe/download
+        boost_1_81_0.exe /SILENT /SP- /SUPPRESSMSGBOXES /DIR="${{ env.BOOST_ROOT }}"
 
     - name: Cache OpenCASCADE archive
       id: cache-opencascade
@@ -93,7 +90,7 @@ jobs:
           cmake .. ^
                 -DOpenCASCADE_DIR=${{github.workspace}}\occt-vc143-64 ^
                 -DOpenCASCADE_3RDPARTY_DIR=${{github.workspace}}\3rdparty-vc14-64 ^
-                -DBOOST_ROOT="${{ steps.install-boost.outputs.BOOST_ROOT }}"
+                -DBOOST_ROOT="${{ env.BOOST_ROOT }}"
           cmake --build . ^
                 --config Release ^
                 --parallel ${{steps.cpu-cores.outputs.count}}
