--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,20 +40,11 @@ jobs:
         cached: ${{ steps.cache-qt.outputs.cache-hit }}
         modules: 'qtcharts qtdatavis3d qtnetworkauth'
 
-    - name: Cache vcpkg
-      id: cache-vcpkg
-      uses: actions/cache@v4
-      with:
-        path: |
-           ${{ env.VCPKG_ROOT }}/installed
-           ${{ env.VCPKG_ROOT }}/packages
-           ${{ env.VCPKG_ROOT }}/downloads
-        key: ${{ runner.os }}-vcpkg-boost-x64-windows
-
-    - name: Install Boost via vcpkg
-      if: steps.cache-vcpkg.outputs.cache-hit != 'true'
+    - name: Install Boost
+      shell: cmd
       run: |
-        vcpkg install boost:x64-windows
+        curl -L -o boost_1_81_0.7z https://sourceforge.net/projects/boost/files/boost-binaries/1.81.0/boost_1_81_0-msvc-14.3-64.7z/download
+        7z x boost_1_81_0.7z -o"C:\" -y
 
     - name: Cache OpenCASCADE archive
       id: cache-opencascade
@@ -96,10 +87,9 @@ jobs:
           cd ${{github.workspace}}\build
           cmake --version
           cmake .. ^
-                -DOpenCASCADE_DIR=${{github.workspace}}\occt-vc143-64 ^
-                -DOpenCASCADE_3RDPARTY_DIR=${{github.workspace}}\3rdparty-vc14-64 ^
-                -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ^
-                -DVCPKG_TARGET_TRIPLET=x64-windows
+                -DOpenCASCADE_DIR="${{github.workspace}}\occt-vc143-64" ^
+                -DOpenCASCADE_3RDPARTY_DIR="${{github.workspace}}\3rdparty-vc14-64" ^
+                -DBOOST_ROOT="C:/boost_1_81_0"
           cmake --build . ^
                 --config Release ^
                 --parallel ${{steps.cpu-cores.outputs.count}}
